<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Server Connection</string>
    <string name="home_page">Connecting to Server</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="LoginGet">Login - Get</string>
    <string name="LoginPost">Login - Post</string>
    <string name="App">Login Application</string>
    <string name="LoginStatus">Login Status:</string>
    <string name="LoginRole">Login Role:</string>
    <string name="Status">Not login</string>
    <string name="Role">Not assigned</string>
    <string name="method">Login Method:</string>
    <string name="Choose">Choose Method</string>
</resources>
